Autenticacion JWT - Encriptacion de contraseña
Login y registro funcional
Generacion de Token