@@ -3,13 +3,14 @@ package com.api.modules.user.service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import com.api.modules.user.dto.UserRequestDTO;
+import com.api.modules.user.dto.UserCreateDTO;
 import com.api.modules.user.dto.UserResponseDTO;
+import com.api.modules.user.dto.UserUpdateDTO;
 import com.api.modules.user.mapper.UserMapper;
 import com.api.modules.user.model.User;
 import com.api.modules.user.repository.UserRepository;
@@ -21,13 +22,13 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor // equivalente a @Autowired
 public class UserService {
     private final UserRepository userRepository;
+    private final PasswordEncoder passwordEncoder;
 
     // Obtener todos los usuarios
     public List<UserResponseDTO> getAll() {
-        return userRepository.findAll()
-                .stream()
+        return userRepository.findAll().stream()
                 .map(UserMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Obtener usuario por ID
@@ -38,25 +39,28 @@ public class UserService {
     }
 
     // Crear un nuevo usuario (mas adelante cifrado de contraseña)
-    public UserResponseDTO create(UserRequestDTO dto) {
+    public UserResponseDTO create(UserCreateDTO dto) {
         if (userRepository.existsByEmail(dto.getEmail())) {
             throw new DataIntegrityViolationException("El correo electrónico ya está registrado.");
         }
 
         User user = UserMapper.toEntity(dto);
+        user.setPassword(passwordEncoder.encode(dto.getPassword()));
+
         User saved = userRepository.save(user);
         return UserMapper.toResponseDTO(saved);
     }
 
-
     // Actualizar usuario existente
-    public UserResponseDTO update(UUID id, UserRequestDTO dto) {
+    public UserResponseDTO update(UUID id, UserUpdateDTO dto) {
         return userRepository.findById(id)
                 .map(user -> {
                     user.setName(dto.getName());
-                    user.setEmail(dto.getEmail());
-                    user.setPassword(dto.getPassword());
+                    if (dto.getPassword() != null && !dto.getPassword().isBlank()) {
+                        user.setPassword(passwordEncoder.encode(dto.getPassword()));
+                    }
                     user.setUpdatedAt(LocalDateTime.now());
+
                     User updated = userRepository.save(user);
                     return UserMapper.toResponseDTO(updated);
                 })
